# Qtodoshka

./: CMakeLists.txt  qml.qrc
src/: ActivityScale.qml  CMakeLists.txt  MainView.qml  Navbar.qml  Task.qml  TaskView.qml  TimeLabel.qml  main.cpp  main.qml  session.cpp  session.h  taskmodel.cpp  taskmodel.h
